--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "kill-port": "^2.0.1",
     "mocha": "^10.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "ping": "^0.4.4",
     "popups": "^1.1.3",
     "supertest": "^6.3.3"
   }
